fix background image

--- a/sass/_stories.scss
+++ b/sass/_stories.scss
@@ -23,7 +23,7 @@
     min-height:65rem;
     flex-direction: column;
     justify-content: space-between;
-    background-image: url(/images/background.jpeg);
+    background-image: url(images/background.jpeg);
     background-size: cover;
     padding: 2rem 2rem;
     position: relative;
