--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,4 +1,5 @@
 // COLOR VARIABLES
+/*
 $color-primary: #c69963;
 $color-primary-dark: #B28451;
 
@@ -9,18 +10,22 @@ $color-grey-light-2: #aaa;
 
 $color-grey-dark-1: #54483A;
 $color-grey-dark-2: #6D5D4B;
+*/
 
 // FONT VARIABLES
-$font-primary: 'Roboto', sans-serif;
-$font-display: 'Montserrat', sans-serif;
 
 // RESPONSIVE BREAKPOINTS
+/*
 $bp-largest: 75em;   // 1200px
 $bp-large: 62.5em;   // 1000px
 $bp-medium: 50em;    // 800px;
 $bp-small: 37.5em;    // 600px;
+*/
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Roboto:wght@400;500&display=swap');
+$font-primary: 'Roboto', sans-serif;
+$font-display: 'Montserrat', sans-serif;
+
 *,
 *::before,
 *::after {
@@ -36,9 +41,8 @@ html {
 
 body {
     font-family: $font-primary;
-    color: $color-grey-dark-2;
+    //color: $color-grey-dark-2;
     color:black;
-
     font-weight: 400;
     line-height: 1.6;
 }
