--- a/sass/_stories.scss
+++ b/sass/_stories.scss
@@ -1,124 +1,190 @@
 .stories{
     //margin: 10rem;
-    background-color: $color-grey-light-1;
+    //background-color: $color-grey-light-1;
     display: grid;
     //grid-auto-columns: 
     grid-gap: 20px;
-    grid-template-columns: repeat(auto-fit, minmax(50rem, auto));
+    grid-template-columns: repeat(auto-fit, minmax(406px, auto));
 
 }
+.b7{
+    background-image: url(../images/bgs/7.png.webp);      
+}
+.b1{
+    background-image: url(../images/bgs/1.png.webp);      
+}
+
+.b2{
+    background-image: url(../images/bgs/2.png.webp);      
+}
+
+.b3{
+    background-image: url(../images/bgs/3.png.webp);      
+}
+
+.b4{
+    background-image: url(../images/bgs/4.png.webp);      
+}
+
+.b5{
+    background-image: url(../images/bgs/5.png.webp);      
+}
+
+
 .story{
-    display: flex;
-    min-width:45rem;
-    min-height:65rem;
-    flex-direction: column;
-    justify-content: space-between;
-    background-image: url(../images/background.jpeg);
+    min-width:406px;
+    width:406px;
+    height:722px;
+    min-height:722px;
+    margin:2rem;
     background-size: cover;
-    padding: 2rem 2rem;
-    position: relative;
-    overflow: hidden;
-  &__label{ 
-        margin: 1rem 0rem;
+    justify-self: center;
+   
+    padding: 2rem 2rem;  
+    padding-right:1rem;
+    &__label{ 
+        border:#FFDD2D solid 5px;
         background-color:  #FFDD2D;
-        border-radius: 35%;
+        border-radius: 2rem;
         font-size:1.5rem;            
-        height:3rem;
         width:10rem;
+        margin:5px;
         display:flex;
         justify-content: center;
         align-items: center;
     }
 
     &__header{
+        padding-top: 2rem;
+        
         color:white;
         font-weight: 900;
         font-size: 3.7rem;
         font-family: $font-display;
-        //align-self: center;
-        //width:10rem;
     }
 
     &__text{
+        padding: 1.5rem 0;
+        color:white;
+        font-weight: 400;
+        font-size: 2.3rem;
+        font-family: $font-primary;
+    }
+
+    &__link{
+        padding: 3px 0;
+        &:link, 
+        &:visited {
+        color: #ffde01;
+        display:inline-block;
+        text-decoration: none;
+        font-weight: 400;
+        font-size: 2.3rem;
+        font-family: $font-primary;
+        transition: all .2s;
+        }
+
+        &:hover{
+            color:white;
+            box-shadow: 0 1rem 2rem rgba(black, .15);
+            transform:translateY(-2px);
+        }
+
+        &:active{
+            box-shadow: 0 1rem 1rem rgba(black, .15);
+            transform:translateY(0);
+        }
+    }
+
+    &__list{
+        list-style-type:disc;
+        list-style-position: inside;
         color:white;
         font-weight: 400;
         font-size: 2.0rem;
         font-family: $font-primary;
+      li{
+          margin:0;
+          margin-top:5px;
+      }
     }
-
-    &__subcard{
-        position:relative;
-        background-color: white;
-        border-radius: 25%;
-        margin-top:7rem;
-        margin-left:2rem;
-        margin-bottom: 7rem;
-        padding: 2rem 2rem;
+    
+    &__form{
+        width:100%;
+        margin-top: 2rem;
+        background: #aab3c9;
+        border-radius: 2rem;
         display: flex;
-
-        &__photo{
-            width:8rem;
-            height:8rem;
-            border-radius: 50%;
-        }
-        
-        &__caption{
-            margin-left:1rem;
-            display: flex;
-            flex-direction: column;
-            align-items:flex-start;
-            justify-content: center;
-        }
-
-        &__header{
-            font-weight: 500;
-            font-size:2rem;
-        }
-        &__text{
+        align-items: center;
+        justify-content: center;
+        height:10rem;
+        padding: 1rem 1rem;
+        margin-bottom: 33rem;
+        //justify-self: start;
+        &__textarea{    
+            line-height: 1;
+            outline: none;
+            resize: none;
+            overflow: hidden;
+            border: none;
+            background: #aab3c9;
+            color: #333333;
             font-weight: 400;
-            font-size:1.6rem;
-            z-index:100;
+            font-size: 1.9rem;
+            font-family: $font-primary;
+            text-align: left;  
         }
+        &__button{
+            background-color: #ffde01;
+            font-family: inherit;
+            font-size: 2.0rem;
+            border:0;
+            padding:5px;
+            height:5rem;
+            width:80%;
+            border-radius: 10rem;
+            color: #333333;
+            align-self: center;
+            
+            &:hover {
+                transform: translateY(-3px);
+                box-shadow: 0 1rem 2rem rgba(black,.2);
         
-        &__fig_1{
-            width:15rem;
-            height:15rem;
-            //z-index: ;
-            position:absolute;
-            top:-9rem;
-            left:-4rem;
-         
+                &::after {
+                    transform: scaleX(1.4) scaleY(1.6);
+                    opacity: 0;
+                }
+            }
+            
+            &:active,
+            &:focus {
+                outline: none;
+                transform: translateY(-1px);
+                box-shadow: 0 .5rem 1rem rgba(black,.2);
+            }                      
+            &::after {
+                content: "";
+                display: inline-block;
+                height: 100%;
+                width: 100%;
+                border-radius: 10rem;
+                position: absolute;
+                top: 0;
+                left: 0;
+                z-index: -1;
+                transition: all .4s;
+            }
+            
         }
-
-        &__fig_2{
-            width:15rem;
-            height:15rem;
-            //z-index: ;
-            position:absolute;
-            top:-9rem;
-            right:0rem;
-         
-        }
-
-        &__fig_3{
-            width:15rem;
-            height:15rem;
-            z-index: 2 ;
-            position:absolute;
-            top:45%;
-            right: 0rem;         
-        }
-
+ 
     }
-    &__fig_2{
-        width:30rem;
-        height:30rem;
-        position:absolute;
-        bottom:-12rem;
-        left:-10rem;
-        -webkit-filter: blur(3px);
-        filter: blur(3px);
-    }
-
 }
 
+.flex1{
+    display:flex;
+    flex-direction: column;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+}
